--- a/static/css/carousel.css
+++ b/static/css/carousel.css
@@ -11,7 +11,6 @@ body {
 
 /* CUSTOMIZE THE CAROUSEL
 -------------------------------------------------- */
-
 /* Carousel base class */
 .carousel {
   margin-bottom: 4rem;
@@ -26,12 +25,13 @@ body {
 .carousel-item {
   height: 32rem;
 }
+
 .carousel-item > img {
   position: absolute;
   top: 0;
   left: 0;
-  min-width: 100%;
-  height: 32rem;
+  min-height: 100%;
+  object-fit: cover;
 }
 
 
