--- a/static/css/carousel.css
+++ b/static/css/carousel.css
@@ -30,6 +30,8 @@ body {
   position: absolute;
   top: 0;
   left: 0;
+  min-width: 100%;
+  height: 32rem;
   min-height: 100%;
   object-fit: cover;
 }
